--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,9 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
+                        <a href="{{ site.baseurl }}/">home</a>
+            <a href="{{ site.baseurl }}/">post</a>
+
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
