--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post">
+<article class="post" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);">
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
