--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,11 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
-           <nav>
-
-                
-
-        </nav>
+          <ul class="nav nav-tabs">
+  <li role="presentation" class="active"><a href="#">Home</a></li>
+  <li role="presentation"><a href="#">Profile</a></li>
+  <li role="presentation"><a href="#">Messages</a></li>
+</ul>
         </header>
       </div>
     </div>
